project(cars)

add_executable(demo_cars
    ../../common/platform/cpu.cpp
    ../../common/platform/log.cpp
    ../../common/platform/platform.cpp
    ../common/stb.cpp
    ../common/font.cpp
    main.cpp
)
target_link_libraries(
    demo_cars
    PRIVATE
    swrast
    swr_app
    simdjson
    stb
    tinyobjloader
    ${EXTRA_LIBS}
)
