add_executable(demo_cars
    ${SWR_SOURCE_DIR}/src/common/platform/cpu.cpp
    ${SWR_SOURCE_DIR}/src/common/platform/log.cpp
    ${SWR_SOURCE_DIR}/src/common/platform/platform.cpp
    ${SWR_SOURCE_DIR}/src/demos/common/stb.cpp
    ${SWR_SOURCE_DIR}/src/demos/common/font.cpp
    main.cpp
)
target_include_directories(demo_cars
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_cars
    PRIVATE
    cpu_features
    swrast
    swr_app
    simdjson
    stb
    tinyobjloader
    swr_project_options
    swr_project_warnings
)
