add_executable(demo_cars
    $<TARGET_OBJECTS:swr_demo_common>
    ${SWR_SOURCE_DIR}/src/demos/common/font.cpp
    ${SWR_SOURCE_DIR}/src/demos/common/stb.cpp
    main.cpp
)
target_include_directories(demo_cars
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_cars
    PRIVATE
    simdjson
    stb
    swr_demo_common
    tinyobjloader
)
